# quantprobe

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESKTOP_SETUP.md  LAWS.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_lossless_spike.md  RESEARCH_LOG.md  conftest.py  pyproject.toml  requirements.txt  run_tokps.cmd
cmcore/: Cargo.toml  bench.ps1
cmcore/src/: main.rs
data/: fetch_data.py
docs/: DEEP-DIVE.md  EXAMPLES.md  HARDWARE.md  index.html  simulator.html
evocompress/: __init__.py  backends.py  cm_codec.py  engine.py  evaluator.py  fitness.py  genome.py  openevolve_adapter.py  pipeline.py  report.py  transforms.py
experiments/: EXPERIMENT_LOG.md  HUTTER_NOTES.md  run_hutter.py  run_spike.py  struct_probe.py  struct_probe2.py  weights_explore.py
preregistrations/: 2026-07-23-colibri-v1.1.md  2026-07-23-laguna-s-2.1-on-2016-desktop.md  2026-07-24-law6-speculation-economics.md  2026-07-24-reap-expert-pruning.md  2026-07-25-law5-prefill-pilot.md
quantprobe/: __init__.py  __main__.py  auto.py  cli.py  dashboard.py  detect.py  fetch.py  optimize.py  plan.py  probe.py  runtime.py  spec.py  target.py
results/: champion.json  hutter_results.json  results.json
tests/: smoke.py  test_engine.py  test_evaluator.py  test_pipeline.py  test_transforms.py
tools/: run_kernel.cmd  run_py.cmd  run_trellis.cmd
weights/: ABLITERATION_DETECT_RESULTS.md  DATA_MANIFEST.md  DISCLOSURE.md  EVOLUTION_LOG.md  EVOLUTION_R13-21.md  GEMMA_PORT.md  GGUF_DEPTH_RECIPE.md  KERNEL_README.md  LAW5_PROTOCOL.md  PAPER.md  PAPER_DRAFT.md  PAPER_MOE.md  README.md  (+157 more)
(+27 files in other folders)
