[package]
name = "cmcore"
version = "0.1.0"
edition = "2021"
description = "Evolvable context-mixing lossless codec (the EVOLVE-BLOCK is the Predictor)"

[[bin]]
name = "cmcore"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true        # shrink the decompressor (counts toward Hutter prize size)
